<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="true"
    app:cardCornerRadius="18dp"
    app:cardElevation="7dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="17dp"
            android:gravity="center"
            android:text="@string/welcome_dialog_title"
            android:textColor="@color/secondary_gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInstruction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="17dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="17dp"
            android:gravity="center"
            android:text="@string/welcome_dialog_instruction"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="20dp"
            android:text="@string/welcome_dialog_sex"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnMale"
            app:layout_constraintEnd_toStartOf="@+id/btnMale"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnMale" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="20dp"
            android:text="@string/welcome_dialog_age"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerAge"
            app:layout_constraintEnd_toStartOf="@+id/spinnerAge"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinnerAge" />

        <com.example.myapplication.ui.GenderSelectorButton
            android:id="@+id/btnMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:genderType="male"
            app:layout_constraintBottom_toBottomOf="@+id/btnFemale"
            app:layout_constraintEnd_toStartOf="@+id/btnFemale"
            app:layout_constraintTop_toTopOf="@+id/btnFemale" />

        <com.example.myapplication.ui.GenderSelectorButton
            android:id="@+id/btnFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="46dp"
            app:genderType="female"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInstruction" />

        <Spinner
            android:id="@+id/spinnerAge"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_spinner_item"
            android:clickable="true"
            android:focusable="true"
            android:popupBackground="@drawable/bg_dropdown_list"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="@+id/btnFemale"
            app:layout_constraintStart_toStartOf="@+id/btnMale"
            app:layout_constraintTop_toBottomOf="@+id/btnFemale" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="14dp"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:text="@string/welcome_dialog_continue"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerAge" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>